css/style.css
body	{
	background-color:#F8ECE0;
	padding-top: 70px;
}

/* Bootstrap 3 navbar — BS5版と縦サイズを揃える
   このプロジェクトの bootstrap.min.css は navbar-brand height:80px / navbar min-height:80px /
   navbar-nav>li>a padding 29px のカスタム値を持つため、style.css 側で 56px に上書きする。
   Bootstrap のメディアクエリ内ルールに勝つため、全部 !important + .navbar.navbar-fixed-top
   プレフィックスで特異性も高めている。
   height は固定しない（折返しや collapse 展開で navbar-inverse 背景が伸びる必要があるため min-height のみ）。 */
nav.navbar.navbar-fixed-top,
.navbar.navbar-fixed-top {
  min-height: 56px !important;
  margin-bottom: 0 !important;
}
.navbar.navbar-fixed-top .navbar-nav > li > a {
  padding: 17px 8px !important;
  margin: 0 !important;
  line-height: 22px !important;
  font-size: 13px !important;
}
.navbar.navbar-fixed-top .navbar-brand {
  height: auto !important;
  padding-top: 17px !important;
  padding-bottom: 17px !important;
  padding-left: 8px !important;
  padding-right: 8px !important;
  font-size: 13px !important;
}
.navbar.navbar-fixed-top .navbar-toggle {
  margin-top: 11px !important;
  margin-bottom: 11px !important;
  padding: 7px 10px !important;
}
.navbar.navbar-fixed-top .navbar-nav {
  margin-top: 0 !important;
  margin-bottom: 0 !important;
}
.navbar.navbar-fixed-top.navbar-inverse {
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
}
/* スマホで burger 展開時 / 中間幅で項目が折返した時に、暗い背景を確実に下まで伸ばす */
.navbar.navbar-fixed-top.navbar-inverse .navbar-collapse,
.navbar.navbar-fixed-top.navbar-inverse .navbar-header {
  background-color: #222;
}
/* BS3 mobile collapsed dropdown はデフォルトで透明 → 中身が読みづらいので少し縁取りする */
@media (max-width: 767px) {
  .navbar.navbar-fixed-top.navbar-inverse .navbar-nav .open .dropdown-menu {
    background-color: #111 !important;
    padding-left: 8px;
  }
  .navbar.navbar-fixed-top.navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
    color: #eee !important;
  }
}

/* 検索ボタン（全ページ共通・Bootstrap 3 navbar 内） */
.navbar.navbar-fixed-top a.navbar-brand.navbar-search-btn,
a.navbar-brand.navbar-search-btn {
  display: inline-flex !important;
  align-items: center;
  gap: 5px;
  padding: 6px 14px !important;
  margin: 11px 6px !important;
  height: auto !important;
  line-height: 1.4 !important;
  border-radius: 6px;
  background: rgba(255, 255, 255, 0.18);
  border: 1px solid rgba(255, 255, 255, 0.35);
  font-size: 14px;
  font-weight: 600;
  color: #f8f9fa !important;
  text-decoration: none;
  transition: background 0.18s ease;
}

a.navbar-brand.navbar-search-btn:hover,
a.navbar-brand.navbar-search-btn:focus {
  background: rgba(255, 255, 255, 0.32);
  color: #ffffff !important;
  text-decoration: none;
}

.navbar-brand-dropdown {
	margin: 0;
}
.navbar.navbar-fixed-top .navbar-brand.dropdown-toggle,
.navbar-brand.dropdown-toggle {
	padding: 17px 8px !important;
	height: auto !important;
	margin: 0 !important;
	font-size: 13px !important;
}
.dropdown-menu.dropdown-brand {
	margin-left: -30px;
}

/* コンテナなしナビバーでのnav-right右端はみ出し防止 */
@media (min-width: 768px) {
    .navbar-nav.navbar-right {
        margin-right: 0;
    }
}



/*
input[type="submit"] {
    height: 30px;
    margin: 3px;
}
*/

input[type="submit"].requestconfirm {
    height: 50px;
    margin: 3px;
    width: 100%
}

input.toolinfo {
	font-size: xx-large;
	font-weight: bold;
}
div.toolinfo {
	font-size: xx-large;
	font-weight: bold;
}

div.playercontrol {
width: 95%;
}

input.playstart {
-webkit-appearance: button;
	width: 100%; 
	height: 4em;
	margin: 0.5em;
}

button.pcbuttom {
-webkit-appearance: button;
	width: 100%;
	height: 3em;
	margin: 2%;
}

input.pcbuttom {
-webkit-appearance: button;
	width: 100%;
	height: 3em;
	margin: 2%;
}

button.pcvolume {
-webkit-appearance: button;
	width: 100%;
	height: 3em;
	margin: 2%;
}

button.pcmorefunc {
-webkit-appearance: button;
	width: 100%;
	height: 3em;
	margin: 2%;
}

button.pcdelay {
-webkit-appearance: button;
	width: 100%;
	height: 3em;
	margin: 2%;
}


input.topbtn {
-webkit-appearance: button;
width: 95%;
height: 3em;
}

button.topbtn {
-webkit-appearance: button;
width: 10%;
height: 2em;
}

button.reloadbtn {
-webkit-appearance: button;
width: 4em;
height: 2em;
}


.pcarea {
    width: 98%;
    height: 24em;
}

input.fullwidth{
width: 95%;
}

table.modifytable {
width: 95%;
}

#table tbody th.filename {
width: 33%;
}

#table tbody td.comment {
width: 30%;
}

#table tbody tr:nth-child(odd) {
  /* 奇数行の背景色を設定します。 */
  background-color: #ffeeff;
}
#table tbody tr:nth-child(even) {
  /* 偶数行の背景色を設定します。 */
  background-color: #eeffff;
}


table#request_table td, table#request_table th{
border-top: 1px solid #000;
border-right: 1px solid #000;
border-left: 1px solid #000;
border-bottom: 1px solid #000;
}

table#request_table {
border-top: 1px solid #000;
border-right: 1px solid #000;
border-left: 1px solid #000;
border-bottom: 1px solid #000;

}

#request_table tbody td.comment {
width: 35%;
}

#request_table tbody td.filename {
width: 30%;
font-weight:bold;
text-align: center; 
}


#request_table tbody tr:nth-child(odd) {
  /* 奇数行の背景色を設定します。 */
  background-color: #ffeeff;
}
#request_table tbody tr:nth-child(even) {
  /* 偶数行の背景色を設定します。 */
  background-color: #eeffff;
}

table#searchresult {
width: 95%;
}

.searchresult tbody tr:nth-child(odd) {
  /* 奇数行の背景色を設定します。 */
  background-color: #ffeeff;
}
.searchresult tbody tr:nth-child(even) {
  /* 偶数行の背景色を設定します。 */
  background-color: #eeffff;
}

table#request_table th.no {
    padding: 10px 3px;
}

table#request_table td.nowplaying {
    padding: 8px 4px;
}

table#request_table td.action,
table#request_table td.change {
    padding: 8px 4px;
}

input#addcomment {
width: 50%;
}

input#name {
width: 20%;
}


div.searchtextbox {
float : left;
}

div.clearleftfloat {
clear: left; 
}

/* for search page */
div.searchtextbox {
    width: 50%;
}

input.searchtextbox {
    width: 95%;
}

div.commentpost {
    border-style: solid;
    border-width: 1px;
}

dt.resultwordlist {
   width: 50%;
}

tr td.filename div.idmove {
    padding-top: 150px;
    margin-top: -150px;
}

tr td.filename a.nowplayinghere {
    padding-top: 150px;
    margin-top: -150px;
}

div.menulink {
    padding-top: 30px;
}

h1.menulink {
    margin-top: 0px;
    padding-top: 0px;
}

h3.menulink {
    margin-top: 0px;
    padding-top: 0px;
}

a.commentmodallink {
display: block;
width:100%;
height:100%;
min-height: 1em;
}

a.commentmodallink:link {
color: #000000;
text-decoration: none;
}

.indexbtn {
    margin-bottom: 7px;
    font-weight: bold;
}

.indexbtnstr {
    font-weight: bold;
    white-space: normal;
}

.indexbtnstr_lg {
    font-weight: bold;
    white-space: normal;
}

button.returnbtn {
    white-space: normal;
}

@media only screen and (max-width: 560px){
#table{
display: block;
}
#table caption{
display: block;
}

#table thead{
display: none;
}
#table tbody{
display: block;
}
			#table tbody tr{
				display: block;
				margin-bottom: 1.5em;
			}
			#table tbody th,
			#table tbody td{
				display: list-item;
				border: none;
			}
#table tbody th{
margin-bottom: 5px;
list-style-type: none;
color: #fff;
background: #000;
}
#table tbody td{
margin-left: 20px;
padding: 0;
}

#table tbody th.filename {
width: 100%;
}

#table tbody td.comment {
width: 100%;
}

#table tbody td.singer:before { content: "[登録者] "; }
#table tbody td.comment:before { content: "[コメント] "; }
#table tbody td.kind:before { content: "[再生方法] "; }
#table tbody td.nowplaying:before { content: "[再生状況] "; }
#table tbody td.action { 
		display: block;
/* 		float: left; */
		}
#table tbody td.change { display: block; }
#table tbody td.change:after { clear: both; }

#request_table{
display: block;
}
#request_table caption{
display: block;
}

#request_table thead{
display: none;
}
#request_table tbody{
display: block;
}
			#request_table tbody td.filename{
				display: block;
				margin-bottom: 1.5em;
			}
			#request_table tbody th,
			#request_table tbody td{
				display: list-item;
				border: none;
			}
			#request_table tbody tr{
				display: block;
				margin-bottom: 1.5em;
			}
#request_table tbody td.filename{
margin-bottom: 5px;
list-style-type: none;
color: #fff;
background: #000;
}
#request_table tbody td{
width: calc(100% - 20px);
margin-left: 20px;
padding: 0;
margin-right: 0px;
}

#request_table tbody td.comment{
width: calc(100% - 20px);
margin-left: 20px;
padding: 0;
margin-right: 0px;
}

#request_table tbody td.filename {
width: 100%;
margin: 0 auto;
padding: 8px 0px;

}



#request_table tbody td.singer:before { content: "[登録者] "; }
#request_table tbody td.comment:before { content: "[コメント] "; }
#request_table tbody td.kind:before { content: "[再生方法] "; }
#request_table tbody td.nowplaying:before { content: "[再生状況] "; }
#request_table tbody td.action { 
		display: block;
/* 		float: left; */
		}
#request_table tbody td.change { display: block; }
#request_table tbody td.change:after { clear: both; }




#notfoundtable{
display: block;
}
#notfoundtable caption{
display: block;
}

#notfoundtable thead{
display: none;
}
#notfoundtable tbody{
display: block;
}
			#notfoundtable tbody tr{
				display: block;
				margin-bottom: 1.5em;
			}
			#notfoundtable tbody th,
			#notfoundtable tbody td{
				display: list-item;
				border: none;
			}
#notfoundtable tbody th{
margin-bottom: 5px;
list-style-type: none;
color: #fff;
background: #000;
}
#notfoundtable tbody td{
margin-left: 20px;
padding: 0;
}

#notfoundtable tbody th.filename {
width: 100%;
}

#notfoundtable tbody td.comment {
width: 100%;
}

#notfoundtable tbody td.comment:before { content: "[コメント] "; }
#notfoundtable tbody td.kind:before { content: "[状況] "; }
#notfoundtable tbody td.link:before { content: "[リンク] "; }
#notfoundtable tbody td.action { 
		display: block;
/* 		float: left; */
		}

table.searchresult{
display: block;
}

table.searchresult caption{
display: block;
}

table.searchresult thead{
display: none;
}
table.searchresult tbody{
display: block;
}
			table.searchresult tbody tr{
				display: block;
				margin-bottom: 1.5em;
				border: 1px solid #000000;
			}
			table.searchresult tbody th,
			table.searchresult tbody td{
				display: block;
				border: none;
			}

table.searchresult tbody td.no { display: none; }

table.searchresult tbody td.filename { 
font-weight:bold;
margin-bottom: 5px;
list-style-type: none;
color: #fff;
background: #000;
}
 
table.searchresult tbody td.filesize:before { content: "[サイズ] "; }
table.searchresult tbody td.length:before { content: "[再生時間] "; }
table.searchresult tbody td.filepath:before { content: "[パス] "; }


#searchresult{
display: block;
}
#searchresult caption{
display: block;
}

#searchresult thead{
display: none;
}
#searchresult tbody{
display: block;
}
			#searchresult tbody tr{
				display: block;
				margin-bottom: 1.5em;
				border: 1px solid #000000;
			}
			#searchresult tbody th,
			#searchresult tbody td{
				display: block;
				border: none;
			}

#searchresult tbody td.no { display: none; }

#searchresult tbody td.filename { 
font-weight:bold;
margin-bottom: 5px;
list-style-type: none;
color: #fff;
background: #000;
}
 
#searchresult tbody td.filesize:before { content: "[サイズ] "; }
#searchresult tbody td.length:before { content: "[再生時間] "; }
#searchresult tbody td.filepath:before { content: "[パス] "; }

div.searchtextbox {
    width: 100%;
}

input.searchtextbox {
    width: 95%;
    height: 2em;
}

select.searchtextbox {
    width: 95%;
    height: 2em;
}

div.searchtextbox {
float : none;
}

.indexbtn {
    margin-bottom: 7px;
    font-weight: bold;
    padding-left: 5px;
    padding-right: 5px;
}

.indexbtnstr {
    font-size:4vw;
    font-weight: bold;
}


}

